<resources>
    <string name="app_name">Simpleword</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Simpleword</string>
    <string name="nav_header_subtitle">BCK, k2@uos.ac.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_allWord">모든 단어</string>
    <string name="menu_trash">휴지통</string>
    <string name="menu_setting">설정</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="import_xls">Import from XLS</string>
    <string name="title_activity_select_file">Select XLS file</string>
    <string name="title_activity_add_word">Add a word</string>
    <string name="word">Word</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="textview">TextView</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_word_editing">WordEditingActivity2</string>
    <string name="tag">태그</string>
    <string name="search">검색</string>

</resources>
