<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_allWord"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_allWord"/>
        <item
                android:id="@+id/nav_trash"
                android:icon="@drawable/ic_delete"
                android:title="@string/menu_trash" />
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
