<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<!--
    Ref. Start an activity from a PreferenceScreen
    https://stackoverflow.com/questions/15287595/start-an-activity-from-a-preferencescreen
-->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="import/export words">

        <Preference
                app:key="import"
                app:title="단어 가져오기(xls)"
                app:summary="엑셀파일에서 단어를 가져옵니다.">
            <intent android:targetPackage="com.bck.simpleword"
                    android:targetClass="com.bck.simpleword.SelectFileActivity"/>
        </Preference>

        <ListPreference

                app:defaultValue="reply"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:key="reply"
                app:title="@string/reply_title"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />

        <ListPreference
                app:defaultValue="reply"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:key="reply"
                app:title="@string/reply_title"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title" />

        <SwitchPreferenceCompat
                app:dependency="sync"
                app:key="attachment"
                app:summaryOff="@string/attachment_summary_off"
                app:summaryOn="@string/attachment_summary_on"
                app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
